2005-07-14  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen.rb:
		make codegen works on ruby 1.8.2
	* CodeGen/templates/*.cs
	  Mono.Cecil.Metadata/*.cs:
	  	style

2005-07-13  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Implem/VariableDefinition.cs:
		set the index field

2005-07-13  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.dll.sources: regenerated
	* Mono.Cecil.Signatures/SignatureReader.cs:
		Fix compilation warnings
	* Mono.Cecil/IArrayType.cs
	  Mono.Cecil.Implem/ArrayType.cs:
	  	Add Rank helper property
	* Mono.Cecil/ITypeDefinition.cs
	  Mono.Cecil.Implem/TypeDefinition.cs:
	  	Add Constructors helper property

2005-07-11  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IMethod.cs
	  Mono.Cecil.Implem/Instruction.cs
	  Mono.Cecil.Implem/ExceptionHandler.cs
	  Mono.Cecil.Implem/MethodDefinition.cs
	  Mono.Cecil.Implem/Label.cs
	  Mono.Cecil.Implem/CodeReader.cs
	  Mono.Cecil.Implem/MethodBody.cs
	  Mono.Cecil.Implem/CilEmitter.cs
	  Mono.Cecil.Cil/ILabel.cs
	  Mono.Cecil.Cil/IInstruction.cs
	  Mono.Cecil.Cil/IExceptionHandler.cs
	  Mono.Cecil.Cil/IMethodBody.cs
	  Mono.Cecil.Cil/ICilEmitter.cs:
		Preliminary changes on the instruction model before
		changing of latptop

2005-07-08  Jb Evain  <jbevain@gmail.com>

   * Every generated files: use \n instead of \r\n

2005-07-07  Jb Evain  <jbevain@gmail.com>

	* *.*: use Mono coding conventions
	* Mono.Xml/*.*: update Mono.Xml from corlib
	* Mono.Cecil.Metadata/CultureUtils.cs:
		Ensure that Cecil works under Mono

2005-07-02  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/IMethod.cs
	  Mono.Cecil/IProperty.cs
	  Mono.Cecil/IEvent.cs
	  Mono.Cecil/IField.cs
	  Mono.Cecil/ITypeDefinition.cs
	  Mono.Cecil.Implem/MethodDefinition.cs
	  Mono.Cecil.Implem/PropertyDefinition.cs
	  Mono.Cecil.Implem/EventDefinition.cs
	  Mono.Cecil.Implem/FieldDefinition.cs
	  Mono.Cecil.Implem/TypeDefinition.cs:
		Add some funky sugar attributes,
		more to come

2005-07-01  Jb Evain  <jbevain@gmail.com>

	* CodeGen/cecil-gen.rb,